--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "devDependencies": {
     "nuxt": "^3.1.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "h3@1.1.0": "patches/h3@1.1.0.patch"
+    }
   }
 }
